fix: revert controls order, fix #root isolation to fix menu z-index

--- a/src/frontend/index.css
+++ b/src/frontend/index.css
@@ -5,7 +5,7 @@ html, body {
   overscroll-behavior: none;
 }
 
-.root {   isolation: isolate; }
+#root { isolation: isolate; }
 
 @theme {
   --color-neutral-2: #c7c7c7;
